# pyarrow-hotfix

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: tests.yml
src/pyarrow_hotfix/: __about__.py  __init__.py
tests/: __init__.py  data.arrow  data.pq  test_in_process.py  test_subprocess.py
