[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyarrow-hotfix"
dynamic = ["version"]
description = ''
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "Apache License, Version 2.0"}
keywords = []
authors = [
  { name = "Antoine Pitrou", email = "antoine@python.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/pyarrow-hotfix#readme"
Issues = "https://github.com/unknown/pyarrow-hotfix/issues"
Source = "https://github.com/unknown/pyarrow-hotfix"

[tool.hatch.version]
path = "src/pyarrow_hotfix/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pyarrow",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests} -v --tb=native"

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]
