[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyarrow-hotfix"
dynamic = ["version"]
description = ''
readme = "README.rst"
requires-python = ">=3.5"
license = {text = "Apache License, Version 2.0"}
keywords = []
authors = [
  { name = "Antoine Pitrou", email = "antoine@python.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/pitrou/pyarrow-hotfix#readme"
Issues = "https://github.com/pitrou/pyarrow-hotfix/issues"
Source = "https://github.com/pitrou/pyarrow-hotfix"

[tool.hatch.version]
path = "src/pyarrow_hotfix/__about__.py"

[tool.hatch.envs.hatch-test]
dependencies = [
  "pyarrow",
  "pytest",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
